# Frenetix-Occlusion

./: .gitignore  README.md  main.py  pyproject.toml
configurations/frenetix_motion_planner/: cost.yaml  debug.yaml  planning.yaml
configurations/simulation/: evaluation.yaml  occlusion.yaml  prediction.yaml  simulation.yaml  visualization.yaml
example_scenarios/: 01_right_turn.xml  02_left_turn.xml  03_intersection_left_turn.xml  scenario1.xml  scenario2.xml  scenario3.xml
frenetix_occlusion/: agent.py  interface.py  route_planner.py  sensor_model.py  spawn_locator.py
frenetix_occlusion/config/: config.yaml
frenetix_occlusion/metrics/: be.py  cp.py  dce.py  hr.py  metric.py  ttc.py  ttce.py  wttc.py
frenetix_occlusion/metrics/utils/: collision_probability.py  convert_dynamic_obstacle.py  harm_model.py  logistic_regression.py
frenetix_occlusion/utils/: fo_obstacle.py  frenetix_handler.py  helper_functions.py  prediction_visualization.py  sampling.py  visualization.py
